--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.farrellw.hwe</groupId>
-    <artifactId>scala-practice</artifactId>
+    <artifactId>hwe-scala-practice</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
